[gd_scene load_steps=11 format=3 uid="uid://vncgfvhdwod8"]

[ext_resource type="Script" uid="uid://843d781qmk57" path="res://ball_script.gd" id="1_x8fbi"]
[ext_resource type="Script" uid="uid://bqmvtdhm13wtr" path="res://weapon_shape_2d_script.gd" id="2_41u45"]
[ext_resource type="FontFile" uid="uid://dj3iqqjqchyt3" path="res://fonts/Super Squad.otf" id="2_ktgx5"]
[ext_resource type="FontFile" uid="uid://cp8ckbrt1edkh" path="res://fonts/BarberChop.otf" id="4_hgol0"]
[ext_resource type="AudioStream" uid="uid://o4xnc6g7c1kr" path="res://sounds/parry-ultrakill.mp3" id="4_n5601"]
[ext_resource type="Script" uid="uid://7dn0euhwvq3" path="res://sensory_field_script.gd" id="6_gchj4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_x8fbi"]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_x8fbi"]
radius = 56.0089

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8fbi"]
resource_local_to_scene = true
bg_color = Color(0, 0, 0, 1)
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999

[sub_resource type="CircleShape2D" id="CircleShape2D_n5601"]
resource_local_to_scene = true

[node name="ball" type="Node2D"]
editor_description = "bouncy"
script = ExtResource("1_x8fbi")
health_color = Color(1, 1, 1, 1)

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_x8fbi")
gravity_scale = 0.0
center_of_mass_mode = 1
contact_monitor = true
max_contacts_reported = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("CircleShape2D_x8fbi")

[node name="Face" type="Panel" parent="RigidBody2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x8fbi")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="RigidBody2D"]
offset_left = -40.0
offset_top = -32.0
offset_right = 40.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_ktgx5")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Weapon" type="Node2D" parent="RigidBody2D"]
z_index = 7

[node name="TextureRect" type="TextureRect" parent="RigidBody2D/Weapon"]
offset_right = 40.0
offset_bottom = 40.0

[node name="WeaponShape2D" type="CollisionShape2D" parent="RigidBody2D"]
script = ExtResource("2_41u45")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="RigidBody2D/WeaponShape2D"]
stream = ExtResource("4_n5601")

[node name="Sensory Field" type="Area2D" parent="RigidBody2D"]
visible = false
collision_layer = 4294967295
collision_mask = 4294967295
monitorable = false
script = ExtResource("6_gchj4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Sensory Field"]
shape = SubResource("CircleShape2D_n5601")

[node name="Face" type="Panel" parent="RigidBody2D/Sensory Field"]
modulate = Color(1, 1, 1, 0.364706)
y_sort_enabled = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x8fbi")
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="RigidBody2D/Sensory Field"]

[node name="AvgDmg" type="Label" parent="."]
z_index = 4096
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -14.0
offset_right = 74.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.914029, 0.914029, 0.914029, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_hgol0")
theme_override_font_sizes/font_size = 25
text = "Average
Damage: 0"
horizontal_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_body_entered"]
[connection signal="body_exited" from="RigidBody2D" to="." method="_on_rigid_body_2d_body_exited"]
[connection signal="body_shape_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_body_shape_entered"]
[connection signal="body_shape_entered" from="RigidBody2D" to="RigidBody2D/WeaponShape2D" method="_on_rigid_body_2d_body_shape_entered"]
[connection signal="body_shape_entered" from="RigidBody2D/Sensory Field" to="." method="_on_sensory_field_body_shape_entered"]
[connection signal="body_shape_exited" from="RigidBody2D/Sensory Field" to="." method="_on_sensory_field_body_shape_exited"]
